--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,9 @@
 *.iml
 out
 gen
-/stream/target
-/MyMap/target
-/LoL/target
-/lambda/target
-/AbstractFactory/target
+/stream/target/
+/MyMap/target/
+/LoL/target/
+/lambda/target/
+/AbstractFactory/target/
+
